2010-08-31  Emanuel Schuetze <emanuel@intevation.de>

	* configure.ac: Updated compendium en version date.

2010-08-26  Emanuel Schuetze <emanuel@intevation.de>

	* configure.ac, include/config.nsi.in, src/Makefile.am,
	src/uninst-compendium_en.nsi, src/inst-sections.nsi,
	src/inst-compendium_de.nsi, src/inst-compendium_en.nsi,
	src/installer-finish.nsi, po/de.po: Install new compendium-en.

	* packages/packages.current: Update kleopatra and kdelibs.

2010-08-25  Emanuel Schuetze <emanuel@intevation.de>

	* configure.ac: Change date and version of compendium-en.

2010-08-25  Werner Koch  <wk@g10code.com>

	* patches/gnupg2-2.0.16/04-gpgtar-2.patch: Update.

2010-08-24  Werner Koch  <wk@g10code.com>

	* patches/gnupg2-2.0.16/04-gpgtar-2.patch: New.
	* Makefile.am (EXTRA_DIST): Add patch

2010-08-24  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update libassuan.

2010-08-17  Emanuel Schuetze <emanuel@intevation.de>

	* configure.ac: Added date and version for English compendium.

2010-07-27  Werner Koch  <wk@g10code.com>

	* src/sha1sum.c (unescapefname): Fix unescaping of \f,\v and \b.

2010-07-23  Werner Koch  <wk@g10code.com>

	* patches/gnupg2-2.0.16/03-kbx-realloc.patch: New.

2010-07-22  Werner Koch  <wk@g10code.com>

	* patches/gpgme/02-w32-io-threads.patch: Revert the theoretical
	more robust pipe/thread creation.

2010-07-21  Werner Koch  <wk@g10code.com>

	* src/uninst-gpgol.nsi, src/inst-gpgol.nsi: Install pt and sv locale.

	* packages/packages.current: Update gpgex and libgpg-error.

	* src/inst-gpgex.nsi: Install pt locale.
	* src/uninst-gpgex.nsi: Uninstall pt locale.

2010-07-21  Emanuel Schuetze <emanuel@intevation.de>
	
	* src/uninst-gpg4win.nsi, src/inst-gpg4win.nsi:
	Update for install/uninstall new README.pt.txt file.
	* src/Makefile.am, doc/Makefile.am: Add README.pt.txt.

2010-07-19  Werner Koch  <wk@g10code.com>

	* src/uninst-gnupg2.nsi: Uninstall gpgtar.exe
	* src/inst-gnupg2.nsi: Install gpgtar.exe
