@@ -1,4 +1,4 @@
-# inst-compendium_de.nsi - Installer snippet       -*- coding: latin-1; -*-
+# inst-compendium.nsi - Installer snippet       -*- coding: latin-1; -*-
 # Copyright (C) 2008 g10 Code GmbH
 # 
 # This file is part of Gpg4win.
@@ -22,41 +22,54 @@
 !endif
 
 
-${MementoSection} "$(DESC_Name_compendium_de)" SEC_compendium_de
+${MementoSection} "$(DESC_Name_compendium)" SEC_compendium
   SetOutPath "$INSTDIR"
 !ifdef SOURCES
   # No need to include anything as the manuals are part of gpg4win
 !else
 
   SetOutPath "$INSTDIR\share\gpg4win"
-  File "${BUILD_DIR}/../doc/manual/gpg4win-compendium-de.pdf"
-  SetOutPath "$INSTDIR\share\gpg4win\html-de"
-  File "${BUILD_DIR}/../doc/manual/gpg4win-compendium-de.html.d/*"
+  File "${BUILD_DIR}/../doc/manual/gpg4win-compendium-*.pdf"
+  SetOutPath "$INSTDIR\share\gpg4win\compendium-html"
+  SetOutPath "$INSTDIR\share\gpg4win\compendium-html\images-hyperlatex"
+  File "${BUILD_DIR}/../doc/manual/compendium-html/images-hyperlatex/*"
+  SetOutPath "$INSTDIR\share\gpg4win\compendium-html\images-compendium"
+  File "${BUILD_DIR}/../doc/manual/compendium-html/images-compendium/*"
+  SetOutPath "$INSTDIR\share\gpg4win\compendium-html\de"
+  File "${BUILD_DIR}/../doc/manual/compendium-html/de/*"
+  SetOutPath "$INSTDIR\share\gpg4win\compendium-html\en"
+  File "${BUILD_DIR}/../doc/manual/compendium-html/en/*"
 !endif
 ${MementoSectionEnd}
 
 
-# The name of the link.
-LangString DESC_Name_compendium_de ${LANG_ENGLISH} \
-   "Gpg4win Compendium DE"
+# The name of the installer component.
+LangString DESC_Name_compendium ${LANG_ENGLISH} \
+   "Gpg4win Compendium"
+# The description text used in the installer components dialog.
+LangString DESC_SEC_compendium ${LANG_ENGLISH} \
+   "The Gpg4win documentation (English and German)"
 
 # The name of the PDF version of the link
 LangString DESC_Name_compendium_de_pdf ${LANG_ENGLISH} \
    "Gpg4win Compendium (pdf, German)"
+LangString DESC_Name_compendium_en_pdf ${LANG_ENGLISH} \
+   "Gpg4win Compendium (pdf, English)"
 
 # The name of the HTML version of the link
 LangString DESC_Name_compendium_de_html ${LANG_ENGLISH} \
    "Gpg4win Compendium (html, German)"
-
-# The description text used in the installer components dialog.
-LangString DESC_SEC_compendium_de ${LANG_ENGLISH} \
-   "Gpg4win Compendium (German)"
+LangString DESC_Name_compendium_en_html ${LANG_ENGLISH} \
+   "Gpg4win Compendium (html, English)"
 
 # The string displayed in the startmenu for the PDF version.
 LangString DESC_Menu_compendium_de_pdf ${LANG_ENGLISH} \
    "Show the Gpg4win Compendium (pdf, German)"
+LangString DESC_Menu_compendium_en_pdf ${LANG_ENGLISH} \
+   "Show the Gpg4win Compendium (pdf, English)"
 
 # The string displayed in the startmenu for the HTML version.
 LangString DESC_Menu_compendium_de_html ${LANG_ENGLISH} \
    "Show the Gpg4win Compendium (html, German)"
-
+LangString DESC_Menu_compendium_en_html ${LANG_ENGLISH} \
+   "Show the Gpg4win Compendium (html, English)"
